services need adjustments

--- a/src/app/features/members/pages/member-edit-page/member-edit-page.component.html
+++ b/src/app/features/members/pages/member-edit-page/member-edit-page.component.html
@@ -1,6 +1,6 @@
 <h2>Editing {{ member.name }}</h2>
 <app-member-form
   [member]="member"
-  (onSuccess)="edit($event)"
-  (onCancel)="cancel()"
+  (onSuccess)="handleEdit($event)"
+  (onCancel)="handleCancel()"
 ></app-member-form>
