--- a/src/app/features/members/pages/member-add-page/member-add-page.component.html
+++ b/src/app/features/members/pages/member-add-page/member-add-page.component.html
@@ -1,5 +1,7 @@
-<h2>Adding a new member</h2>
-<app-member-form
-  (onSuccess)="add($event)"
-  (onCancel)="cancel()"
-></app-member-form>
+<app-auth-layout>
+  <h2>Adding a new member</h2>
+  <app-member-form
+    (onSuccess)="add($event)"
+    (onCancel)="cancel()"
+  ></app-member-form>
+</app-auth-layout>
