--- a/src/app/features/members/pages/members-page/members-page.component.html
+++ b/src/app/features/members/pages/members-page/members-page.component.html
@@ -1,18 +1,20 @@
-<h3>Team Members</h3>
-<div>
-  <button (click)="addMember()">Add a new team member</button>
-</div>
-<div class="member-container">
-  <div class="member-column">
-    <app-member-list
-      [members]="members"
-      (onSelectMember)="handleSelectMember($event)"
-    ></app-member-list>
+<app-auth-layout>
+  <h3>Team Members</h3>
+  <app-loading *ngIf="isLoading"></app-loading>
+  <button (click)="handleAddMember()">Add a new team member</button>
+  <div class="member-container">
+    <div class="member-column">
+      <app-member-list
+        [members]="members"
+        (onSelectMember)="handleSelectMember($event)"
+      ></app-member-list>
+    </div>
+    <div class="member-column">
+      <app-member-displayer
+        *ngIf="selectedMember"
+        [id]="selectedMember.id"
+        (onDelete)="handleDeleteMember($event)"
+      ></app-member-displayer>
+    </div>
   </div>
-  <div class="member-column">
-    <app-member-displayer
-      *ngIf="selectedMember"
-      [id]="selectedMember.id"
-    ></app-member-displayer>
-  </div>
-</div>
+</app-auth-layout>
