--- a/src/app/features/layout/auth-layout/auth-layout.component.html
+++ b/src/app/features/layout/auth-layout/auth-layout.component.html
@@ -1,4 +1,4 @@
-<header class="auth-header">Team Manager -</header>
+<header class="auth-header">Team Manager - {{ authData.name }}</header>
 
 <nav>
   <a routerLink="/members">Team</a>
