--- a/src/app/features/layout/auth-layout/auth-layout.component.html
+++ b/src/app/features/layout/auth-layout/auth-layout.component.html
@@ -1,5 +1,5 @@
+<app-loading *ngIf="isLoading"></app-loading>
 <header class="auth-header">Team Manager - {{ authData.name }}</header>
-
 <nav>
   <a routerLink="/members">Team</a>
   <a routerLink="/tasks">Tasks</a>
